# reticule-minor

./: CHANGELOG.md  LICENSE  cabal.project  cabal.project.freeze  flake.nix  reticule-minor.cabal
app/: Main.hs  Viewport.hs
devlog/: CHANGELOG.md  reticule-devlog.cabal
nix/: hix.nix  ticks-fix.patch  triangulate.patch
src/Data/: Cast.hs  PartialNum.hs
src/Reticule/: Renderer.hs  Types.hs  Utils.hs
