cabal-version:   3.4
name:            reticule-minor
version:         0.1.0.0
synopsis:        A simple haskell raytracer
description:
  A simple haskell raytracer, made as a warmup for the final reticule raytracer

license:         BSD-3-Clause
license-file:    LICENSE
author:          Trouble-Truffle
maintainer:      perigordtruffle7318@gmail.com
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ConstraintKinds
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

library
  import:           warnings
  exposed-modules:
    Reticule.Types
    Reticule.Utils

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base              ^>=4.16.1.0
    , gloss
    , JuicyPixels
    , lens
    , linear
    , megaparsec
    , random
    , template-haskell
    , text
    , transformers

  hs-source-dirs:   src
  default-language: GHC2021

executable reticule-minor
  import:           warnings
  main-is:          Main.hs
  other-modules:    Viewport

  -- other-extensions:
  build-depends:
    , base                  ^>=4.16.1.0
    , gloss
    , gloss-juicy
    , JuicyPixels
    , lens
    , linear
    , megaparsec
    , optparse-applicative
    , vector
    , random
    , reticule-minor
    , text
    , transformers

  hs-source-dirs:   app
  ghc-options:      -threaded -O2 "-with-rtsopts=-N"
  default-language: GHC2021

test-suite reticule-minor-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.16.1.0
    , reticule-minor
